<resources>
    <string name="app_name">School Desk</string>
    <string name="page_title">Sign In</string>
    <string name="hello_this_is_dashboard">Hello! This is Dashboard.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Below strings are for navigation_menu.xml file -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_events">Up coming Events</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_exam">Exam Schedule</string>
    <string name="menu_result">Results</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_message">Send SMS</string>
    <string name="menu_logout">Log Out</string>
    <string name="school_desk">School Desk</string>
    <string name="school_address">School Address</string>

    <!-- Below strings are sources for SharedPreferances -->
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>
    <string name="pref_session_id">com.example.preference_session_id</string>

    <!-- Below sourced for Login page -->
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">sign in</string>
    <string name="touble_message">Trouble Sign in? Click here</string>
    <string name="login_image">Login Image</string>
    <string name="visibility_string">For visibility of password</string>

</resources>
